fix overflow-y setting

--- a/static/style.scss
+++ b/static/style.scss
@@ -17,6 +17,7 @@ body, html {
     align-items: center;
     background: $bg-gradient;
     color: $text-color;
+    overflow-y: auto;
 }
 
 body{
